--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="Refresh" content="0; url='https://sites.google.com/u/0/d/1f4iVT9Fds-K7ooSlQUMIf_mB5PS0lyt9/p/1-__0m5zJz7WND1VNxSAkYO8KzfxJtQtJ/preview'" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7024917855157226"
+     crossorigin="anonymous"></script>
