--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+<html>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7024917855157226"
      crossorigin="anonymous"></script>
